<resources>
    <string name="app_name">MathApplication</string>
    <string name="splashTitle">Poincaré</string>
    <string name="SplashPhrase">El azar no es más que la medida de la ignorancia del hombre</string>

    <string-array name="Formulas">
        <item>Ecuacion 1</item>
        <item>Ecuacion 2</item>
        <item>Ecuacion 3</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masa">Masa</string>
    <string name="volumen">Volumen</string>
    <string name="newtons">Newtons</string>
    <string name="area">m²</string>
    <string name="fuezalb">Fuerza</string>
    <string name="areap">Area</string>
    <string name="aceleration">Aceleracion</string>
    <string name="unidadAceleraion">m/s²</string>
    <string name="fuerzaBtnt">Fuerza</string>
    <string name="densidad">Densidad</string>
    <string name="volume">m³</string>
    <string name="Mass">Kg</string>
    <string name="btnPresion">Presion</string>
    <string name="fuerzabtn">Fuerza</string>
    <string name="VolumenesNulos">No se admiten Volumenes nulos</string>
    <string name="Return">Volver</string>
    <string name="UnidadDensidad">Kg/m³</string>
    <string name="la_presion_es">La Densidad es:</string>
    <string name="unidadPresion">N/m²</string>
    <string name="PresionResultaText">La Presion es:</string>
    <string name="FueraSt">La Fuerza es:</string>
    <string name="n">N</string>

</resources>